--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div class="content">
+    <form>
+        <div class="Name">
+            <label for="username">Nombre de usuario</label>
+            <input type="text" [(ngModel)]="username" name="username" required>
+        </div>
+        <div class="password">
+            <label for="password">Contraseña</label>
+            <input [(ngModel)]="password" type="password" name="password" required>
+        </div>
+        <button type="submit">Inicia Sesión</button>
+    </form>
+    <p>¿No tienes una cuenta? <a [routerLink]="'/register'">Regístrate aquí</a></p
+</div>
