--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="content">
-    <form>
-        <div class="Name">
-            <label for="username">Nombre de usuario</label>
-            <input type="text" [(ngModel)]="username" name="username" required>
+    <form (ngSubmit)="login()">
+        <div class="name">
+            <label for="email">Correo Electrónico</label>
+            <input type="email" [(ngModel)]="email" name="email" required>
         </div>
         <div class="password">
             <label for="password">Contraseña</label>
             <input [(ngModel)]="password" type="password" name="password" required>
         </div>
         <button type="submit">Inicia Sesión</button>
+        <p>¿No tienes una cuenta? <a routerLink="/login">Regístrate aquí</a></p>
     </form>
-    <p>¿No tienes una cuenta? <a [routerLink]="'/register'">Regístrate aquí</a></p
 </div>
