--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,6 +9,7 @@
             <input [(ngModel)]="password" type="password" name="password" required>
         </div>
         <button type="submit">Inicia Sesión</button>
-        <p>¿No tienes una cuenta? <a routerLink="/login">Regístrate aquí</a></p>
+        <p>¿No tienes una cuenta? <a routerLink="/register">Regístrate aquí</a></p>
     </form>
 </div>
+<router-outlet></router-outlet>
