--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -1,3 +1,10 @@
 <nav>
-    <div class="profile"></div>
+    <div class="menu">
+        <button>
+            Menu
+        </button>
+    </div>
+    <div class="profile">
+        Perfil
+    </div>
 </nav>
