--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,17 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="background-wrap">
-      <div class="bubble x1"></div>
-      <div class="bubble x2"></div>
-      <div class="bubble x3"></div>
-      <div class="bubble x4"></div>
-      <div class="bubble x5"></div>
-      <div class="bubble x6"></div>
-      <div class="bubble x7"></div>
-      <div class="bubble x8"></div>
-      <div class="bubble x9"></div>
-      <div class="bubble x10"></div>
+    <div id="background-wrap" [class.hidden]="!showBubbles">
+      <div class="bubble x1" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x2" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x3" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x4" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x5" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x6" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x7" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x8" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x9" [class.hidden]="!showBubbles"></div>
+      <div class="bubble x10" [class.hidden]="!showBubbles"></div>
     </div>
     <router-outlet></router-outlet>
   </body>
