--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <app-navbar></app-navbar>
-    <app-sidebar></app-sidebar>
+    <app-sidebar  [class.hidden]="!isSidebarVisible"></app-sidebar>
   </body>
 </html>
