--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,11 +1,10 @@
 html,
 body {
   height: 100vh;
-  background: #d5e2d449;
+  background: #ffffff49;
   overflow: hidden;
   overflow-x: hidden;
   margin: 0;
-  margin-left: 250px; 
   padding: 0;
   font: 100% Lato, Arial, Sans Serif;
 }
@@ -19,14 +18,6 @@ body {
   z-index: -1;
 }
 
-app-sidebar {
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    width: 250px; 
-    height: 100%;
-    background-color: #333; 
-    color: white; 
-    padding: 15px; 
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2); 
+.hidden{
+  display: none;
 }
