--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="menu">
-        <button  (click)="onToggleSidebar()">
+        <button  (click)="onToggle()">
             Menu
         </button>
     </div>
