--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -1,10 +1,8 @@
 <nav>
     <div class="menu">
-        <button  (click)="onToggle()">
-            Menu
-        </button>
+        <button class="itemMenu" (click)="onToggle()"> </button>
     </div>
     <div class="profile">
-        Perfil
+        <button class="itemProfile"></button>
     </div>
 </nav>
