--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <app-navbar (toggleSidebar)="handleToggleSidebar()"></app-navbar>
-    <app-sidebar  *ngIf="isSidebarVisible"></app-sidebar>
+    <app-navbar (toggleSidebar)="handleToggleSidebar()" ></app-navbar>
+    <app-sidebar  *ngIf="isSidebarVisible" [class.hidden]="!isSidebarVisible"></app-sidebar>
   </body>
 </html>
