--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,11 @@
 <div class="content">
     <form (ngSubmit)="login()">
-        <div class="name">
+        <div>
             <label for="email">Correo Electrónico</label>
             <input type="email" [(ngModel)]="email" name="email" required>
+
         </div>
-        <div class="password">
+        <div>
             <label for="password">Contraseña</label>
             <input [(ngModel)]="password" type="password" name="password" required>
         </div>
