--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,18 +1,18 @@
 <div class="content">
     <form (ngSubmit)="register()">
-        <div class="name">
-            <label for="email">Nombre de Usuario: </label>
-            <input type="text" [(ngModel)]="username" name="username" required>
+        <div>
+            <label for="name">Nombre de Usuario: </label>
+            <input type="text" [(ngModel)]="name" name="username" required>
         </div>
-        <div class="email">
+        <div>
             <label for="email">Correo Electrónico: </label>
             <input type="email" [(ngModel)]="email" name="email" required>
         </div>
-        <div class="password">
+        <div>
             <label for="password">Contraseña: </label>
             <input [(ngModel)]="password" type="password" name="password" required>
         </div>
-        <div class="confirmPassword">
+        <div>
             <label for="confirmPassword">Confirma tu contraseña: </label>
             <input [(ngModel)]="confirmPassword" type="password" name="confirmPassword" required>
         </div>
