Add a new items for nav

--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -3,6 +3,12 @@
         <button class="itemMenu" (click)="onToggle()"> </button>
     </div>
     <div class="profile">
-        <button class="itemProfile"></button>
+        <button class="itemProfile">
+            <div class="menu-content">
+                <button onclick="alert('Opción 1 seleccionada')">Opción 1</button>
+                <button onclick="alert('Opción 2 seleccionada')">Opción 2</button>
+    
+            </div>
+        </button>
     </div>
 </nav>
