--- a/src/app/components/dashboard/navbar/navbar.component.css
+++ b/src/app/components/dashboard/navbar/navbar.component.css
@@ -1,10 +1,10 @@
 nav {
     display: flex;
-    height: 40px;
+    height: 25px;
     justify-content: space-between;
     align-items: center;
     background-color: #d5e2d449;
-    padding: 20px 20px;
+    padding: 20px 10px;
 }
 
 .menu {
@@ -12,6 +12,39 @@ nav {
     color: #000;
     text-align: left;
 }
+
+.itemProfile:hover .menu-content {
+    display: block;
+}
+
+.itemProfile:hover .menu-button {
+    background-color: #3e8e41;
+}
+
+
+.menu-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.menu-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    left: 0;
+
+}
+
+.menu-content a:hover {
+    background-color: #f1f1f1;
+    left: 0;
+}
+
 
 .profile {
     flex: 0; 
@@ -25,8 +58,10 @@ nav {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    padding: 20px;
+    padding: 15px;
     border: 0px;
+    position: relative;
+    display: inline-block;
 }
 
 .itemMenu{
