--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -260,7 +260,7 @@ body {
 }
 
 .bubble {
-    background-color: #d5e2d4;
+    background-color: #d5e2d444;
     -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 0.6);
     -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 0.6);
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 0.6);
