--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <app-navbar (toggleSidebar)="handleToggleSidebar()" ></app-navbar>
+    <app-main [class.display]="isSidebarVisible"></app-main>
     <app-sidebar  *ngIf="isSidebarVisible" [class.hidden]="!isSidebarVisible"></app-sidebar>
   </body>
 </html>
