--- a/src/app/components/dashboard/sidebar/sidebar.component.css
+++ b/src/app/components/dashboard/sidebar/sidebar.component.css
@@ -1,8 +1,8 @@
 .sidebar { 
-    width: 300px;
+    width:25vw;
     background: #d5e2d456;
     height: calc(100vh - 10px); 
     position: fixed; 
     left: 0;
-    overflow-y: auto
+    overflow-y: auto;
   }
