--- a/src/app/components/dashboard/navbar/navbar.component.css
+++ b/src/app/components/dashboard/navbar/navbar.component.css
@@ -3,7 +3,7 @@ nav {
     height: 25px;
     justify-content: space-between;
     align-items: center;
-    background-color: #d5e2d449;
+    background-color: whitesmoke;
     padding: 20px 10px;
 }
 
