--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
       <div class="lav">
         <label for="password">Contraseña</label>
         <div class="forgot-password">
-          <a routerLink="/register">Olvide mi contraseña</a>
+          <a class="fpass" routerLink="/register">Olvide mi contraseña</a>
         </div>
       </div>
       <input [(ngModel)]="password" type="password" name="password" required />
