--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -23,3 +23,18 @@ body {
   width: 75vw;
   transition: width 0.3s ease; 
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999; /* Debajo del sidebar pero encima del contenido */
+  display: none;
+}
+
+.overlay {
+  display: block; /* Solo se muestra cuando el sidebar está visible */
+}
