--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -7,7 +7,7 @@
 form {
   max-width: 350px;
   width: 100%;
-  margin: 200px auto;
+  margin: 30vh auto;
   padding: 20px;
   background: #f3f3f3c7;
   border-radius: 8px;
