--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -5,9 +5,9 @@
 }
 
 form {
-    max-width: 400px;
+    max-width: 350px;
     width: 100%;
-    margin: 100px auto;
+    margin: 20vh auto;
     padding: 20px;
     background: #f3f3f3c7;
     border-radius: 8px;
@@ -83,6 +83,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
 }
+
 
 /*Animación*/
 @keyframes floating {
