--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar" [class.visible]="isVisible">
     <div class="routes-container">
-        <div class="routes">Configuración</div>
-        <div class="routes">Item 2</div>
-        <div class="routes">Item 3</div>
+        <button class="routes">Configuración</button>
+        <button class="routes">Item 2</button>
+        <button class="routes">Item 3</button>
     </div>
 </div>
