add a first graphic

--- a/src/app/components/dashboard/main/main.component.html
+++ b/src/app/components/dashboard/main/main.component.html
@@ -1,3 +1,13 @@
 <div class="body">
-  <h1>¡Hola de nuevo, {{ username }}!</h1>
+  <div class="top">
+    <div class="div1">
+      <app-graph1></app-graph1>
+    </div>
+    <div class="div2">Div 2</div>
+  </div>
+  <div class="bottom">
+    <div class="div3">Div 3</div>
+    <div class="div4">Div 4</div>
+    <div class="div5">Div 5</div>
+  </div>
 </div>
