--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar" [class.visible]="isVisible">
     <div class="routes-container">
-        <button class="routes">Configuración</button>
-        <button class="routes">Item 2</button>
-        <button class="routes">Item 3</button>
+        <button class="routes">Inicio</button>
+        <button class="routes">Historial</button>
+        <button class="routes">Acerca de</button>
     </div>
 </div>
