--- a/src/app/components/dashboard/graphs/graph1/graph1.component.css
+++ b/src/app/components/dashboard/graphs/graph1/graph1.component.css
@@ -1,4 +1,22 @@
 #chartdiv {
-  width: 100%;
-  height: 40vh;
+  width: 900px;
+  height: 350px;
+}
+h1{
+  text-align: center;
+  margin-top: 70px;
+}
+
+@media (max-width: 1024px) {
+  #chartdiv {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+@media (max-width: 768px) {
+  #chartdiv {
+    width: 100%;
+    height: 400px;
+  }
 }
