--- a/src/app/components/dashboard/main/main.component.html
+++ b/src/app/components/dashboard/main/main.component.html
@@ -3,7 +3,9 @@
     <div class="div1">
       <app-graph1></app-graph1>
     </div>
-    <div class="div2">Div 2</div>
+    <div class="div2">
+      <app-table1></app-table1>
+    </div>
   </div>
   <div class="bottom">
     <div class="div3">Div 3</div>
