--- a/src/app/components/dashboard/sidebar/sidebar.component.css
+++ b/src/app/components/dashboard/sidebar/sidebar.component.css
@@ -1,77 +1,122 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: -30vw;
-    /* Oculta el sidebar por defecto */
-    width: 25vw;
-    height: 100vh;
-    background: whitesmoke;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    transition: left 0.3s ease;
-    z-index: 1000;
-    /*items alineados abajo*/
-
+  position: fixed;
+  top: 0;
+  left: -30vw;
+  /* Oculta el sidebar por defecto */
+  width: 25vw;
+  height: 100vh;
+  background: #d5e2d4;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  transition: left 0.3s ease;
+  z-index: 1000;
+  /*items alineados abajo*/
+  padding: 0px 5px;
 }
 
 .sidebar.visible {
-    left: 0;
+  left: 0;
 }
 
 .routes-container {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 0px 10px 5px;
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 0px 0px 5px;
 }
 
 .routes {
-    max-width: 95%;
-    border-radius: 5px;
-    padding: 10px;
-    background: #ff0000;
-    margin-bottom: 5px;
-
+  max-width: 90%;
+  border-radius: 5px;
+  display: flex;
+  padding: 10px;
+  background: #00000000;
+  margin-bottom: 5px;
+  flex-direction: row;
 }
 
 :host([isVisible="true"]) {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 /*respo*/
 @media (max-width: 768px) {
-    .sidebar {
-        width: 100%;
-        height: 16%;
-        transform: translateY(-105%);
-        padding: 0px 10px;
-    }
+  .sidebar {
+    width: 100%;
+    height: 16%;
+    transform: translateY(-105%);
+    padding: 0px 10px;
+  }
 
+  .sidebar.visible {
+    transform: translateY(0%);
+  }
 
-    .sidebar.visible {
-        transform: translateY(0%);
-    }
-
-    .routes {
-        width: 90%; /* Los items ocupan todo el ancho */
-        text-align: center;
-    }
+  .routes {
+    width: 90%;
+    text-align: center;
+  }
 }
 
 /* Opcional: Overlay para fondo oscuro al abrir el menú */
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
 }
 
 .overlay.visible {
-    display: block;
+  display: block;
+}
+
+.item {
+  border-radius: 100%;
+  padding: 20px;
+  border: none;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+a {
+  margin-top: 10px;
+  font-size: large;
+  position: relative;
+  cursor: pointer;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(to left, #000000a4 30%, #ffffffa4 40%, #000000a4 70%);
+  color: transparent;
+  background-size: 200% auto;
+  animation: shine 3s infinite;
+  margin-left: 20px;
+  align-items: center;
+  text-align: center;
+}
+
+.item.home {
+  background-image: url(https://i.pinimg.com/474x/76/a4/d7/76a4d75e8cf5ee7f4276810526115cf7.jpg);
+}
+
+.item.history {
+  background-image: url(https://thumbs.dreamstime.com/b/icono-de-historial-reconstituci%C3%B3n-vector-276463515.jpg);
+}
+
+.item.about {
+  background-image: url(https://previews.123rf.com/images/vectorhome/vectorhome2001/vectorhome200100068/152318980-por-qu%C3%A9-nosotros-icono.jpg);
+}
+
+@keyframes shine {
+  0% {
+    background-position: 100% center;
+  }
+  100% {
+    background-position: -100% center;
+  }
 }
