--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -71,8 +71,6 @@ a {
   animation: mixColor 5s ease-in-out infinite;
 }
 
-
-
 a:hover {
   text-decoration: underline;
 }
@@ -83,13 +81,13 @@ a:hover {
   align-items: center;
 }
 
-.lav{
+.lav {
   display: flex;
   flex-direction: row;
   margin-bottom: 0px;
 }
 
-.lav a{
+.lav a {
   margin-top: 2px;
   font-size: smaller;
   margin-left: 115px;
@@ -97,18 +95,59 @@ a:hover {
   position: relative;
   -webkit-background-clip: text;
   background-clip: text;
-  background-image: linear-gradient(to left, #8a80f97c 30%, #d5e2d4 40%, #8a80f97c 70%);
+  background-image: linear-gradient(
+    to left,
+    #8a80f97c 30%,
+    #d5e2d4 40%,
+    #8a80f97c 70%
+  );
   color: transparent;
   background-size: 200% auto;
-  animation: shine 3s infinite ;
+  animation: shine 3s infinite;
 }
 
 .forgot-password {
   display: flex;
   flex-direction: row;
-  margin-bottom: 5px; 
-  text-align: right; 
+  margin-bottom: 5px;
+  text-align: right;
   font-size: 0.9em;
+}
+
+.err {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 10px;
+  align-items: center;
+  max-height: 30px;
+  border: 2px  solid linear-gradient(45deg, #8a80f97c, #d5e2d4);
+  background: linear-gradient(45deg, #8a80f97c, #d5e2d4);
+  border-radius: 5px;
+}
+
+.btn-err {
+  cursor: pointer;
+  margin: 0 10px;
+  font-size: 1rem;
+  color: #fff;
+}
+
+.err p {
+  margin: 0 45px;
+  font-size: 0.9rem;
+  color: #fff;
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
+.err a {
+  animation: Color 3s infinite;
+}
+
+.err a:hover {
+  text-decoration: none;
 }
 
 /*Animaciones*/
@@ -122,29 +161,40 @@ a:hover {
   }
 }
 @keyframes changeColor {
-    0%,100% {
-      border-color: #d5e2d4;
-    }
-    50% {
-      border-color: #8a80f97c;
-    }
+  0%,
+  100% {
+    border-color: #d5e2d4;
   }
-
-  @keyframes shine {
-    0% {
-      background-position: 100% center;
-    }
-    100% {
-      background-position: -100% center;
-    }
+  50% {
+    border-color: #8a80f97c;
   }
+}
 
-  @keyframes mixColor {
-    0%,100% {
-      color: #8a80f97c;
-    }
-    50% {
-      color: #bcc0bc;
-    }
-
+@keyframes shine {
+  0% {
+    background-position: 100% center;
   }
+  100% {
+    background-position: -100% center;
+  }
+}
+
+@keyframes mixColor {
+  0%,
+  100% {
+    color: #8a80f97c;
+  }
+  50% {
+    color: #bcc0bc;
+  }
+}
+
+@keyframes Color {
+  0%,
+  100% {
+    color: #fff;
+  }
+  50% {
+    color: #fff;
+  }
+} 
