--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,9 @@
 <div class="content">
   <form (ngSubmit)="register()" >
+    <div class="err" *ngIf="isError">
+      <a style="color: #fff;" class="btn-err" *ngIf="errorMessage" (click)="isError = false">&times;</a>
+      <p *ngIf="errorMessage" class="msg-err">{{ errorMessage }}</p>
+    </div>  
     <div class="inputs" style="display: flex; flex-direction: row">
       <div style="display: flex; flex-direction: column">
         <label for="name">Nombre: </label>
