--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <div class="routes-container">
     <div class="routes">
       <button class="item home"></button>
-      <a routerLink="/main" >Inicio</a>
+      <a routerLink="/dashboard" >Inicio</a>
     </div>
     <div class="routes">
       <button class="item history"></button>
