--- a/src/app/components/dashboard/graphs/graph1/graph1.component.css
+++ b/src/app/components/dashboard/graphs/graph1/graph1.component.css
@@ -10,7 +10,10 @@ h1{
 @media (max-width: 1024px) {
   #chartdiv {
     width: 100%;
-    height: 400px;
+    height: 200px;
+  }
+  h1{
+    margin-top: 10px;
   }
 }
 
