--- a/src/app/components/dashboard/graphs/graph1/graph1.component.css
+++ b/src/app/components/dashboard/graphs/graph1/graph1.component.css
@@ -1,10 +1,11 @@
 #chartdiv {
-  width: 900px;
-  height: 350px;
+  width: 70vw;
+  height: 70vh;
+  margin-top: -70px;
 }
 h1{
   text-align: center;
-  margin-top: 70px;
+  margin-top: 20px;
 }
 
 @media (max-width: 1024px) {
