--- a/src/app/components/dashboard/main/main.component.html
+++ b/src/app/components/dashboard/main/main.component.html
@@ -8,8 +8,17 @@
     </div>
   </div>
   <div class="bottom">
-    <div class="div3">Div 3</div>
-    <div class="div4">Div 4</div>
-    <div class="div5">Div 5</div>
+    <div class="div3">
+      <h2>Accesos</h2><br>
+      <h1>0</h1>
+    </div>
+    <div class="div4">
+      <h2>Accesos</h2><br>
+      <h1>0</h1>
+    </div>
+    <div class="div5">
+      <h2>Accesos</h2><br>
+      <h1>0</h1>
+    </div>
   </div>
 </div>
