--- a/src/app/components/dashboard/main/main.component.html
+++ b/src/app/components/dashboard/main/main.component.html
@@ -10,15 +10,15 @@
   <div class="bottom">
     <div class="div3">
       <h2>Accesos</h2><br>
-      <h1>0</h1>
+      <h1>{{access}}</h1>
     </div>
     <div class="div4">
-      <h2>Accesos</h2><br>
-      <h1>0</h1>
+      <h2>Visitas</h2><br>
+      <h1>{{visits}}</h1>
     </div>
     <div class="div5">
       <h2>Accesos</h2><br>
-      <h1>0</h1>
+      <h1>{{access2}}</h1>
     </div>
   </div>
 </div>
