--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -2,15 +2,21 @@
   <div class="routes-container">
     <div class="routes">
       <button class="item home"></button>
-      <a routerLink="/dashboard" >Inicio</a>
+      <div class="link-content">
+        <a routerLink="/dashboard">Inicio</a>
+      </div>
     </div>
     <div class="routes">
       <button class="item history"></button>
-      <a>Historial</a>
+      <div class="link-content">
+        <a routerLink="/dashboard">Historial</a>
+      </div>
     </div>
     <div class="routes">
       <button class="item about"></button>
-      <a>Acerca de</a>
+      <div class="link-content">
+        <a routerLink="/dashboard">Acerca de </a>
+      </div>
     </div>
   </div>
 </div>
