--- a/src/app/components/dashboard/main/main.component.css
+++ b/src/app/components/dashboard/main/main.component.css
@@ -6,7 +6,8 @@
 
 .body {
   height: 100vh;
-  width: 100vw;
+  width: 94.8%;
+  margin-left: 59px;
   background: #d5e2d4;
   overflow: hidden;
   padding: 10px;
@@ -31,7 +32,7 @@
   align-items: center;
   justify-content: center;
   max-width: 70%;
-  max-height: 70vh; 
+  max-height: 68vh; 
 }
 
 .div2 {
@@ -43,12 +44,12 @@
   align-items: center;
   justify-content: center;
   max-width: 35%;
-  height: 91vh;
+  height: 89vh;
 }
 
 .bottom {
   display: flex;
-  gap: 10px; 
+  gap: 6px; 
   justify-content: flex-start;
   flex-wrap: wrap;
   height: 20vh;
