--- a/src/app/components/dashboard/sidebar/sidebar.component.css
+++ b/src/app/components/dashboard/sidebar/sidebar.component.css
@@ -1,10 +1,11 @@
 .sidebar {
   position: fixed;
   top: 0;
-  left: -30vw;
+  left: -16vw;
   /* Oculta el sidebar por defecto */
-  width: 25vw;
-  height: 100vh;
+  width: 20vw;
+  height:90vh;
+  margin-top: 9vh;
   background: #d5e2d4;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   transition: left 0.3s ease;
@@ -27,6 +28,14 @@
   padding: 0px 0px 5px;
 }
 
+.link-content{
+  background: #ffffff00;
+  width: 50%;
+  border-radius: 10px;
+  text-align: start;
+  padding: 10px;
+}
+
 .routes {
   max-width: 90%;
   border-radius: 5px;
@@ -34,6 +43,11 @@
   padding: 10px;
   background: #00000000;
   margin-bottom: 5px;
+  flex-direction: row-reverse;
+}
+
+.routes.visible{
+  display: flex;
   flex-direction: row;
 }
 
