--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -26,15 +26,15 @@ body {
 
 .overlay {
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999; /* Debajo del sidebar pero encima del contenido */
+  z-index: 99;
   display: none;
 }
 
 .overlay {
-  display: block; /* Solo se muestra cuando el sidebar está visible */
+  display: block;
 }
