--- a/src/app/components/dashboard/navbar/navbar.component.css
+++ b/src/app/components/dashboard/navbar/navbar.component.css
@@ -1,72 +1,54 @@
+/* Estilos generales del navbar */
 nav {
     display: flex;
+    left: 0;
+    top: 0;
     height: 25px;
     justify-content: space-between;
     align-items: center;
-    background-color: whitesmoke;
-    padding: 20px 10px;
-}
-
-.menu {
-    flex: 0; 
-    color: #000;
-    text-align: left;
-}
-
-.itemProfile:hover .menu-content {
+    background-color: #d5e2d49f;
+    padding: 13px;
+    width: calc(100% - 7vw);
+    margin-left: 5vw;
+    
+  }
+  
+  /* Contenedor de perfil alineado a la derecha */
+  .profile {
+    display: flex;
+    align-items: center;
+    margin-left: auto; /* Esto empuja el perfil a la derecha */
+  }
+  
+  /* Estilo del botón de perfil */
+  .itemProfile {
+    border: none;
+    cursor: pointer;
+    border-radius: 100%;
+    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/026/630/551/small/profile-icon-symbol-design-illustration-vector.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:contain;
+    padding: 15px;
+    position: relative;
+  }
+  
+  /* Estilo para mostrar el contenido del menú */
+  .itemProfile:enabled .menu-content {
     display: block;
-}
-
-
-.menu-content {
-    display: none;
+    border: none;
+  }
+  
+  /* Estilos del contenido del menú */
+  .menu-content {
+    display: block !important;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 120px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
     right: 0;
-}
-
-.menu-content a{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    right: 0;
-    
-}
-
-.menu-content a:hover {
-    background-color: #f1f1f1;
-}
-
-
-.profile {
-    flex: 0; 
-    color: #000;
-    text-align: right; 
-}
-
-.itemProfile{
-    border-radius: 100%;
-    background-image:url(https://static.vecteezy.com/system/resources/thumbnails/026/630/551/small/profile-icon-symbol-design-illustration-vector.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    padding: 15px;
-    border: 0px;
-    position: relative;
-    display: inline-block;
-    border: solid 1px #0000001a;
-}
-
-.itemMenu{
-    border-radius: 10px;
-    background-image: url(https://static.vecteezy.com/system/resources/previews/002/292/406/non_2x/hamburger-menu-line-icon-free-vector.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    padding: 20px;
-    border: 0px;
-}
+  }
+  
+  
+  
