--- a/src/app/components/dashboard/profile/profile.component.css
+++ b/src/app/components/dashboard/profile/profile.component.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   animation: floating 3s ease-in-out infinite;
+  z-index: 1;
 }
 
 .modal-content {
